# code-indexer

./: .e2e-automation.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  e2e-automation.sh  fast-automation.sh  full-automation.sh  install-mcpb.sh  lint.sh  pyproject.toml  repos_backup.json  server-fast-automation.sh  setup.py  simple-cache_backup.json
.claude-memory/: MEMORY.md  feedback_active_monitoring_check_back.md  feedback_admin_password_sacred.md  feedback_agent_stall_detection_needs_reply_not_just_mtime.md  feedback_always_checkout_development_before_commit.md  feedback_autonomous_overnight_file_fix_iterate.md  feedback_bootstrap_changes_need_installer_and_autoupdater.md  feedback_bug_report_means_report_not_fix.md  feedback_bump_version_before_staging.md  feedback_check_running_jobs_before_restart.md  feedback_cluster_aware_state_only.md  feedback_convert_tool_docs_destructive.md  feedback_description_refresh_scheduler_requires_staging_validation.md  feedback_e2e_not_code_inspection.md  feedback_e2e_verify_indexes_work.md  feedback_faithful_db_mocks.md  feedback_fix_every_issue_found_no_deferral.md  feedback_implement_story_agentic_no_stops.md  feedback_keep_local_server_running.md  feedback_lint_before_commit.md  (+49 more)
rust/xray-core/: Cargo.toml
rust/xray-core/src/: cache.rs  compiler.rs  dynlib.rs  evaluators.rs  finding.rs  languages.rs  lib.rs  owned_node.rs  scanner.rs  validator.rs
rust/xray-core/tests/: integration_tests.rs
(+4509 files in other folders)
