[package]
name = "xray-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "xray_core"
path = "src/lib.rs"

[dependencies]
tree-sitter = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-bash = "0.25.1"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.25.0"
rayon = "1"
walkdir = "2"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
sha2 = "0.10"
libloading = "0.8"

[dev-dependencies]
tempfile = "3"
